convert next.js to nest.js server
